--- a/src/index.css
+++ b/src/index.css
@@ -1,73 +1,141 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Whitney', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #333333;
-  color: #fff;
-  text-align: center;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    /*background-color: #1f2833;*/
+    background-color: #252e42;
+    /*background-color: #0b0c10;*/
+    color: #fff;
+    text-align: center;
+    user-select: none;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-.preview{
-  margin-top: 50px;
-  float: left;
+.preview {
+    margin-top: 50px;
+    float: left;
 }
 
-.profile-manager{
-  margin-top: 50px;
-  width: 100%;
+.pop-container {
+    margin-bottom: 25px;
+    margin-left: 10%;
+    width: 80%;
+    background-color: #2f3b52;
+    padding: 15px;
+    border-radius: 2px;
+    box-shadow: 0 0 15px 0 #222;
+}
+
+.profile-manager {
+    margin-top: 25px;
+    margin-left: 10%;
+    width: 80%;
+    background-color: #2f3b52;
+    padding: 15px;
+    border-radius: 2px;
+    box-shadow: 0 0 15px 0 #222;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: #495975;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: linear-gradient(90deg, rgb(255, 124, 0) 0%, rgb(255, 37, 105) 100%);
+    border: 2px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #7389b5;
+}
+
+.profile {
+    margin-left: 15px;
+    background-color: #667eab;
+    border-radius: 2px;
+    width: 160px;
+    /*
+    height: 200px;
+    width: 200px;
+    float: left;
+    */
+    display: inline-block;
+    text-align: center;
+}
+.profile:active {
+    position: relative;
+    top: 1px;
+}
+
+.active {
+    background-color: #7b9cd7;
+}
+
+.profiles {
+    /*text-align: left;*/
+}
+
+.profiles-inner {
+    /*
+    margin-left: 20%;
+    margin-right: 20%;
+    height: 250px;
+    */
+    padding: 20px;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+.profile-footer {
+    background-color: #495975;
+    user-select: none;
+    color: #e0efff;
+    position: relative;
+    height: 50px;
+    /*
+    padding: 5px;
+    */
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.profile-name {
+    margin-top: 15px;
+    display: inline-block;
 }
 
 
-.profile{
-  margin: 5px;
-  background: #444;
-  border-radius: 5px;
-  width: 160px;
-  /*
-  height: 200px;
-  width: 200px;
-  float: left;
-  */
-  display: inline-block;
-  text-align: center;
+.profile-remove-button {
+    color: white;
+    width: 20%;
+    height: 100%;
+    cursor: pointer;
+    float: right;
+    text-decoration: none;
+    display: inline-block;
+    border: none;
+    background-color: #ff5252;
+    border-radius: 2px;
 }
 
-.active{
-  background-color: #777;
+.profile-remove-button:hover {
+    background-color: #ff0000;
 }
 
-.profiles{
-  text-align: left;
-}
-
-.profiles-inner{
-  margin-left: 20%;
-  margin-right: 20%;
-  height: 250px;
-  overflow-x: auto;
-  white-space: nowrap;
-}
-
-.profile-footer{
-  color: #fff;
-  position: relative;
-  margin-bottom: 5px;
-  height: 25px;
-}
-
-.profile-remove-button{
-  margin-left: 10px;
-}
-
-.profile canvas:hover{
-  background: #888;
-  cursor: pointer;
+.profile:hover {
+    background-color: rgba();
+    cursor: pointer;
 }
