--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html,
+body{
+    height: 100%;
+    margin:0;
+}
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Whitney', 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,20 +16,44 @@ body {
     /*background-color: #0b0c10;*/
     color: #fff;
     text-align: center;
-    user-select: none;
 }
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/*
+
+#root{
+    height: 100%;
+}
+
+#main{
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+}
+
+.header-container{
+    flex: 0 1 auto;
+}
+
+.crop-container{
+    flex: 1 1 auto
+}
+
+.profile-manager{
+    flex: 0 1 auto;
+}
+
+*/
 
 .preview {
     margin-top: 50px;
     float: left;
 }
 
-.pop-container {
+.header-container {
     margin-bottom: 25px;
     margin-left: 10%;
     width: 80%;
@@ -34,6 +64,12 @@ code {
 }
 
 .profile-manager {
+    position: sticky;
+    bottom: 2%;
+    /*
+    bottom: 2%;
+    position: absolute;
+    */
     margin-top: 25px;
     margin-left: 10%;
     width: 80%;
@@ -43,23 +79,23 @@ code {
     box-shadow: 0 0 15px 0 #222;
 }
 
-::-webkit-scrollbar {
+.profiles ::-webkit-scrollbar {
     width: 5px;
 }
 
-::-webkit-scrollbar-track {
+.profiles ::-webkit-scrollbar-track {
     border-radius: 10px;
     background-color: #495975;
 }
 
-::-webkit-scrollbar-thumb {
+.profiles ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background: linear-gradient(90deg, rgb(255, 124, 0) 0%, rgb(255, 37, 105) 100%);
     border: 2px solid transparent;
     background-clip: content-box;
 }
 
-::-webkit-scrollbar-thumb:hover {
+.profiles ::-webkit-scrollbar-thumb:hover {
     background-color: #7389b5;
 }
 
@@ -102,7 +138,6 @@ code {
 
 .profile-footer {
     background-color: #495975;
-    user-select: none;
     color: #e0efff;
     position: relative;
     height: 50px;
