--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,57 @@
+
+
+:root {
+    --vt-c-white: #ffffff;
+    --vt-c-white-soft: #f8f8f8;
+    --vt-c-white-mute: #f2f2f2;
+
+    --vt-c-black: #181818;
+    --vt-c-black-soft: #222222;
+    --vt-c-black-mute: #282828;
+
+    --vt-c-indigo: #2c3e50;
+
+    --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
+    --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
+    --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
+    --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
+
+    --vt-c-text-light-1: var(--vt-c-indigo);
+    --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
+    --vt-c-text-dark-1: var(--vt-c-white);
+    --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+}
+
+:root {
+    --color-background: var(--vt-c-white);
+    --color-background-soft: var(--vt-c-white-soft);
+    --color-background-mute: var(--vt-c-white-mute);
+
+    --color-border: var(--vt-c-divider-light-2);
+    --color-border-hover: var(--vt-c-divider-light-1);
+
+    --color-heading: var(--vt-c-text-light-1);
+    --color-text: var(--vt-c-text-light-1);
+
+    --section-gap: 160px;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --color-background: var(--vt-c-black);
+        --color-background-soft: var(--vt-c-black-soft);
+        --color-background-mute: var(--vt-c-black-mute);
+
+        --color-border: var(--vt-c-divider-dark-2);
+        --color-border-hover: var(--vt-c-divider-dark-1);
+
+        --color-heading: var(--vt-c-text-dark-1);
+        --color-text: var(--vt-c-text-dark-2);
+    }
+}
+
+
+
 html,
 body {
     height: 100%;
@@ -18,192 +72,54 @@ body {
     text-align: center;
 }
 
-:root{
-    --bg-color-900: hsl(256,33%,10%);
-    --bg-color-800: #1d1e30;
-    --bg-dot-color: hsl(256,33%,70%);
-    --accent-1: #7888F3;
-    --red: #DD7B6A;
+button{
+    background-color: unset;
 }
 
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-#root{
-    height: 100%;
-}
-
-.main{
-    height: 100%;
-    display: flex;
-    flex-flow: row;
-}
-
-.crop-container{
-    flex: 1 1 75%;
+.btn {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.control-panel{
-    display: flex;
-    flex-flow: column;
-    flex: 1 0 25em;
-    max-width: 30em;
-
-    background-color: #1d1e30;
-}
-
-.header {
-    margin-bottom: 1em;
-    padding: 1em;
-    border-bottom: #252e42 solid 1px;
-
-    flex: 0 1 auto;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.header img{
-    height: 2em;
-}
-
-.profile-manager {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    padding: 0 1em;
-    flex-grow: 1;
-    min-height: 0;
-}
-
-
-.profiles {
-    flex-grow: 1;
-    overflow-y: auto;
-    width: 100%;
-    margin: 1em 0;
-}
-
-.profile {
-    display: flex;
-    flex-flow: row;
-    background-color: #494A5E;
-    border-radius: 2px;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.profile + .profile{
-    margin-top: 1em;
-}
-
-.profile:active {
-    position: relative;
-    top: 1px;
-}
-
-.active {
-    /*background-color: #7b9cd7;
-    background: linear-gradient(135deg, #335870, #428192);
-    */
-}
-
-.profile-name {
-    padding: .75em;
-    flex: 1 1 auto;
-}
-
-.profile-name input{
-    position: relative;
-    color: #e1e1e1;
-    padding: 0.25em 0.5em;
-    background-color: transparent;
-    border: none;
-    border-bottom: 2px solid var(--accent-1);
-}
-
-
-.profile-footer {
-    display: flex;
-    flex-flow: column;
-    flex: 1 1 auto;
-    background-color: #3F3951;
-    user-select: none;
-    color: #e0efff;
-    /*
-    padding: 5px;
-    background-color: rgba(0, 0, 0, 0.3);
-    */
-}
-
-.btn-group.no-wrap{
-    flex-wrap: nowrap;
-}
-
-.btn-group{
-    display: flex;
-    flex-flow: row wrap;
-    gap: .25em;
-}
-
-.btn-group .btn{
-    flex: 1 1 40%;
-}
-
-.btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+    color: rgb(236, 236, 236);
     text-decoration: none;
+    font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
+        sans-serif;
     border: none;
-    color: white;
     font-size: 1em;
     padding: .5em .75em;
-    border-radius: 2px;
+    border-radius: 5px;
     cursor: pointer;
     transition: 0.2s;
 }
 
-.btn-small{
-    padding: .25em .75em;
+.blue {
+    border: 1px solid rgb(0, 109, 218);
 }
 
-.btn-red{
-    background-color: #d54040;
-}
-.btn-red:hover, .btn-red:focus{
-    background-color: #bd3030;
+.blue:hover {
+    background-color: rgba(0, 128, 255, 0.1);
 }
 
-.btn-control{
-    background-color: var(--accent-1);
-}
-.btn-control:hover, .btn-control:focus {
-    background-color: #5b68c4;
+.green {
+    border: 1px solid rgb(0, 148, 74);
 }
 
-.btn-upload{
-    background-color: #00B38B;
-}
-.btn-upload:hover, .btn-upload:focus{
-    background-color: #007D59;
+.green:hover {
+    background-color: rgba(0, 167, 83, 0.1);
 }
 
-.footer{
-    display: flex;
-    flex-flow: row;
-    align-items: center;
-    justify-content: space-around;
-
-    margin-top: 1em;
-    padding: .5em 0;
-    border-top: #252e42 solid 1px;
+.btn-grp {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: .25em;
 }
+
+.btn-grp.fill-last>*:first-child {
+    grid-column: span 2;
+}
+
+.btn-grp.fill-last>*:last-child {
+    grid-column: span 2;
+}
+
