--- a/src/components/styles/ProfileListItem.module.css
+++ b/src/components/styles/ProfileListItem.module.css
@@ -5,22 +5,51 @@
 }
 
 .profileCanvas {
-    height: 120px;
-    width: 120px;
+    height: 180px;
+    width: 180px;
     border-radius: 5px;
     display: flex;
     transition: 0.1s;
 }
+
+.profileCrop{
+    position: relative;
+}
+
+.profileName{
+    /* 
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    */
+    width: calc(180px - 2em);
+
+    background-color: rgba(73, 74, 94, 0.627);
+    font-size: 1rem;
+    color: white;
+    backdrop-filter: blur(5px);
+
+    outline: none;
+    border: none;
+    padding: .75em 1em;
+    border-bottom-left-radius: 5px;
+}
+
 
 .rounded {
     border-radius: 50%;
 }
 
 .profileInfo {
-    background-color: #494A5E;
-    margin-left: .25em;
-    border-radius: 5px;
     flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0.25em;
+    
+    background-color: #494A5E;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
     border-left: 1px solid rgba(73, 74, 94, 0.627);
 }
 
