--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,14 @@ button{
     transition: 0.2s;
 }
 
+.red {
+    border: 1px solid rgb(179, 44, 44);
+}
+
+.red:hover {
+    background-color: rgba(207, 30, 30, 0.315);
+}
+
 .blue {
     border: 1px solid rgb(0, 109, 218);
 }
