--- a/src/components/styles/ProfileListItem.module.css
+++ b/src/components/styles/ProfileListItem.module.css
@@ -1,40 +1,53 @@
 .profile {
     display: flex;
     flex-direction: row;
+    background-color: rgba(73, 74, 94, 0.627);
     border-radius: 5px;
 }
 
 .profileCanvas {
     height: 180px;
     width: 180px;
-    border-radius: 5px;
+    border-top-left-radius: 5px;
     display: flex;
     transition: 0.1s;
 }
 
 .profileCrop{
-    position: relative;
 }
 
-.profileName{
-    /* 
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    */
+.profileName {
     width: calc(180px - 2em);
+    padding: .75em 1em;
 
-    background-color: rgba(73, 74, 94, 0.627);
     font-size: 1rem;
-    color: white;
+    color: rgb(224, 224, 224);
     backdrop-filter: blur(5px);
+    
+    border-bottom-left-radius: 5px;
+    border-top: 1px solid #494A5E;
+}
+
+.profileName::after{
+    content: "";
+    position: absolute;
+    bottom: .5em;
+    left: 5%;
+    height: 1px;
+    width: 90%;
+    background-color: rgb(0, 109, 218);
+}
+
+.profileName > input{
+    width: 100%;
+    background-color: transparent;
+    color: inherit;
+    font-size: 1rem;
 
     outline: none;
+    padding: 0;
     border: none;
-    padding: .75em 1em;
-    border-bottom-left-radius: 5px;
 }
-
 
 .rounded {
     border-radius: 50%;
@@ -50,7 +63,7 @@
     background-color: #494A5E;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
-    border-left: 1px solid rgba(73, 74, 94, 0.627);
+    transition: 0.25s;
 }
 
 .active .profileInfo {
