--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ button{
     font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
         Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
         sans-serif;
-    border: none;
+    border: 1px solid transparent;
     font-size: 1em;
     padding: .5em .75em;
     border-radius: 5px;
@@ -92,7 +92,10 @@ button{
 }
 
 .red {
-    border: 1px solid rgb(179, 44, 44);
+    --btn-border-color: rgb(179, 44, 44);
+    --btn-fill-color: rgb(179, 44, 44);
+    --btn-fill-color-hover: rgb(201, 39, 39);
+    border-color: var(--btn-border-color);
 }
 
 .red:hover {
@@ -100,6 +103,9 @@ button{
 }
 
 .blue {
+    --btn-border-color: rgb(0, 109, 218);
+    --btn-fill-color: rgb(0, 109, 218);
+    --btn-fill-color-hover: rgb(19, 98, 177);
     border: 1px solid rgb(0, 109, 218);
 }
 
@@ -108,11 +114,23 @@ button{
 }
 
 .green {
+    --btn-border-color: rgb(0, 148, 74);
+    --btn-fill-color: rgb(0, 148, 74);
+    --btn-fill-color-hover: rgb(11, 105, 58);
     border: 1px solid rgb(0, 148, 74);
 }
 
 .green:hover {
     background-color: rgba(0, 167, 83, 0.1);
+}
+
+.btn-filled {
+    background-color: var(--btn-fill-color);
+    border: none;
+}
+
+.btn-filled:hover{
+    background-color: var(--btn-fill-color-hover);
 }
 
 .btn-grp {
