move profile add/reset buttons

--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,16 @@
     width: 100%;
     padding: 1em;
 }
+
+.flex{
+    display: flex;
+    gap: .5em;
+}
+
+.rows{
+    flex-direction: row;   
+}
+
+.cols{
+    flex-direction: column;   
+}
