fixed initial crop bug added loader show overlay during full gif processing remove select button  fill for unselected profiles

--- a/src/components/styles/Overlay.module.css
+++ b/src/components/styles/Overlay.module.css
@@ -10,8 +10,11 @@
     backdrop-filter: blur(2px);
 
     display: none;
+    
 }
 
 .active {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
