--- a/src/components/styles/ProfileList.module.css
+++ b/src/components/styles/ProfileList.module.css
@@ -5,19 +5,13 @@
 }
 
 .listHeader {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-}
-
-.listHeader > :first-child{
-    margin-right: auto;
-    margin-left: 1em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .profileList {
     padding: 1em;
+    position: relative;
 }
 
 .profileList,
