--- a/src/components/styles/ProfileList.module.css
+++ b/src/components/styles/ProfileList.module.css
@@ -6,6 +6,7 @@
 
 .listHeader {
     display: grid;
+    gap: 1em;
     grid-template-columns: 1fr 1fr;
 }
 
@@ -33,7 +34,8 @@
     display: flex;
     flex-direction: column;
     gap: .5em;
-    margin: 1em 0;
+    margin: 1em auto;
+    padding: 0 0.5em;
 }
 
 h2{
