--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,7 @@ button{
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 0.5em;
     color: rgb(236, 236, 236);
     text-decoration: none;
     font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
