add confirm dialog to reset scroll to top when new profile added less bright profile name color

--- a/src/components/styles/ProfileListItem.module.css
+++ b/src/components/styles/ProfileListItem.module.css
@@ -50,7 +50,7 @@
     padding: .75em;
 
     font-size: 1rem;
-    color: rgb(224, 224, 224);
+    color: hsl(0, 0%, 75%);
     border-left: 1px solid #494A5E;
 }
 
