--- a/src/components/styles/Checkbox.module.css
+++ b/src/components/styles/Checkbox.module.css
@@ -1,21 +1,30 @@
-.inpCheckbox {
+.checkbox {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(236, 236, 236);
-    text-decoration: none;
-    font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
-        sans-serif;
-        font-size: 1em;
+    flex-direction: row;
     border: 1px solid rgb(0, 109, 218);
-    padding: .5em .75em;
-    border-radius: 5px;
     cursor: pointer;
-    transition: 0.2s;
-    user-select: none;
+    border-radius: 5px;
+    transition: background-color 0.2s ease-in-out
 }
 
-.inpCheckbox:hover {
+.checkbox:hover {
     background-color: rgba(0, 128, 255, 0.1);
+}
+
+.checkboxInner {
+    display: flex;
+    margin: 0 0.5em;
+    width: 1.25em;
+    cursor: pointer;
+}
+
+.checkboxLabel {
+    width: 100%;
+    position: relative;
+    padding: .5em;
+
+    cursor: pointer;
+    font-size: 1rem;
+    color: hsl(0, 0%, 75%);
+    border-left: 1px solid rgb(0, 109, 218);
 }
