--- a/src/features/profiles/styles/ProfileList.module.css
+++ b/src/features/profiles/styles/ProfileList.module.css
@@ -22,6 +22,7 @@
 }
 
 .profileList,
+.profileListInner,
 .profiles {
     flex-grow: 1;
     min-height: 0;
@@ -31,7 +32,6 @@
 }
 
 .profileListInner {
-    position: relative;
     overflow: hidden;
 }
 
@@ -43,7 +43,7 @@
     padding: 0 0.5em;
 }
 
-h2{
+h2 {
     margin: 0;
 }
 
@@ -57,12 +57,12 @@ h2{
     color: hsl(0, 0%, 85%);
     border: 1px solid var(--color-border);
     border-radius: 5px;
-    
+
     pointer-events: none;
     opacity: 0;
     bottom: 50px;
     left: 100px;
-    
+
     transition: 0.1s ease-in-out;
 }
 
