--- a/src/components/styles/Checkbox.module.css
+++ b/src/components/styles/Checkbox.module.css
@@ -4,7 +4,8 @@
     border: 1px solid rgb(0, 109, 218);
     cursor: pointer;
     border-radius: 5px;
-    transition: background-color 0.2s ease-in-out
+    transition: 0.1s ease-in-out;
+    color: hsl(0, 0%, 90%);    
 }
 
 .checkbox:hover {
@@ -15,7 +16,7 @@
     display: flex;
     margin: 0 0.5em;
     width: 1.25em;
-    cursor: pointer;
+    cursor: inherit;
 }
 
 .checkboxLabel {
@@ -23,8 +24,17 @@
     position: relative;
     padding: .5em;
 
-    cursor: pointer;
+    cursor: inherit;
     font-size: 1rem;
-    color: hsl(0, 0%, 75%);
+    color: inherit;
     border-left: 1px solid rgb(0, 109, 218);
+}
+
+.checkbox.disabled {
+    cursor: not-allowed;
+    color: hsl(0, 0%, 50%);    
+}
+
+.checkbox.disabled:hover {
+    background-color: unset
 }
